Update tampilan login

--- a/Dashboard/Login.resx
+++ b/Dashboard/Login.resx
@@ -314,33 +314,30 @@
   </data>
   <data name="bunifuButton1.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAWIAAAA0CAYAAACw/DIkAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAADeSURBVHhe7dShAYAwAMCwXbKX4b+dgR9wAJqaiKj6jnnu
-        Nc/7BqCw1zvirwDAX4wYIGbEADEjBogZMUDMiAFiRgwQM2KAmBEDxIwYIGbEADEjBogZMUDMiAFiRgwQ
-        M2KAmBEDxIwYIGbEADEjBogZMUDMiAFiRgwQM2KAmBEDxIwYIGbEADEjBogZMUDMiAFiRgwQM2KAmBED
-        xIwYIGbEADEjBogZMUDMiAFiRgwQM2KAmBEDxIwYIGbEADEjBogZMUDMiAFiRgwQM2KAmBEDxIwYIDbm
-        sa+vAMAPjn09tPUqu7pi+6cAAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAAQUAAAAqCAYAAAC6G07GAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAACkSURBVHhe7dQxEYAwAMBAlNQy+EMGewuMucMBP/yUPds4
+        5jmOtQDeHzxT+ArAX5kCEKYAhCkAYQpAmAIQpgCEKQBhCkCYAhCmAIQpAGEKQJgCEKYAhCkAYQpAmAIQ
+        pgCEKQBhCkCYAhCmAIQpAGEKQJgCEKYAhCkAYQpAmAIQpgCEKQBhCkCYAhCmAIQpAGEKQJgCEKYAhCkA
+        sY19Xl8B+KF9XjdteW9hnZtgUQAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="txtPassword.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAVwAAAA4CAYAAACxBEDUAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAEGSURBVHhe7dSxDcJAAATBr4iEKqjYIrD0fbgMCgC95ITc
-        3mhOmuQK2GFmZuG27X3MOb8AXG819sztGOt4PF8A3GA19syt4ALcSXABIoILEBFcgIjgAkQEFyAiuAAR
-        wQWICC5ARHABIoILEBFcgIjgAkQEFyAiuAARwQWICC5ARHABIoILEBFcgIjgAkQEFyAiuAARwQWICC5A
-        RHABIoILEBFcgIjgAkQEFyAiuAARwQWICC5ARHABIoILEBFcgIjgAkQEFyAiuAARwQWICC5ARHABIoIL
-        EBFcgIjgAkQEFyAiuAARwQWICC5ARHABIoILEPkL7r7vn3UAcL3V2DO3ZmZ2/8b4Af1BH4Mpy8+kAAAA
-        AElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAAQUAAAAuCAYAAAAhigzQAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAADHSURBVHhe7dSxDcJAAATBr4iEKqjYIrD0fVAGBYBeMsGa
+        EjwnTXIF7DAz+9u2PV9zzg9wXasDRxLGWMft/gAubHXgSIIoAKIAnIgCEKIAhCgAIQpAiAIQogCEKAAh
+        CkCIAhCiAIQoACEKQIgCEKIAhCgAIQpAiAIQogCEKAAhCkCIAhCiAIQoACEKQIgCEKIAhCgAIQpAiAIQ
+        ogCEKAAhCkCIAhCiAIQoACEKQIgCEKIAhCgAkSjs+/5eB3BdqwNHEszMfhvjC+U0pcD+SDemAAAAAElF
+        TkSuQmCC
 </value>
   </data>
   <data name="txtEmail.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAV8AAAA4CAYAAABaM/vXAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAEGSURBVHhe7dSxDcJAAATBr4iEKqjYIrDkPlwGBYBeckIB
-        703mpEmugB1mZhZt297ncRxfANaavb3SO8Y8Hs8XAIvN3l7pFV+Au4gvQEB8AQLiCxAQX4CA+AIExBcg
-        IL4AAfEFCIgvQEB8AQLiCxAQX4CA+AIExBcgIL4AAfEFCIgvQEB8AQLiCxAQX4CA+AIExBcgIL4AAfEF
-        CIgvQEB8AQLiCxAQX4CA+AIExBcgIL4AAfEFCIgvQEB8AQLiCxAQX4CA+AIExBcgIL4AAfEFCIgvQEB8
-        AQLiCxAQX4CA+AIExBcgIL4AAfEFCIgvQEB8AQJ/8d33/TMPANaavb3Sa2Zm926MH5q6Ngi+GohvAAAA
+        iVBORw0KGgoAAAANSUhEUgAAAQcAAAAuCAYAAAAlf9ztAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAADKSURBVHhe7dTBCQJBAATBjciPURjx4eNg8zAMA1BWDg6l
+        zaAG6jMB9DAz+7ttuz/mnC+A1YMjDWOs43K9AXwCcaRBHICTOABJHIAkDkASByCJA5DEAUjiACRxAJI4
+        AEkcgCQOQBIHIIkDkMQBSOIAJHEAkjgASRyAJA5AEgcgiQOQxAFI4gAkcQCSOABJHIAkDkASByCJA5DE
+        AUjiACRxAJI4AEkcgCQOQBIHIIkDkMQBSOIAJHEA0lcc9n1/rgNg9eBIg5nZ78Z4AyY4Pj+aVossAAAA
         AElFTkSuQmCC
 </value>
   </data>
